--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 0 16px;
   gap: 16px;
-  margin-bottom: 24px;
+  padding-bottom: 24px;
   @media (min-width: 768px) {
     display: flex;
     flex-direction: row;
@@ -13,7 +13,6 @@
     min-width: 720px;
     gap: 48px;
     margin: 0 auto;
-    margin-bottom: 40px;
   }
   @media (min-width: 1120px) {
     align-items: flex-start;
