--- a/src/styles/_price-table.scss
+++ b/src/styles/_price-table.scss
@@ -9,6 +9,9 @@
     margin-bottom: 24px;
   }
   @media (min-width: 1120px) {
+    min-width: 752px;
+  }
+  @media (min-width: 1440px) {
     width: 1056px;
   }
 }
