--- a/src/styles/_swiper-menu.scss
+++ b/src/styles/_swiper-menu.scss
@@ -4,9 +4,7 @@
   margin-bottom: 24px;
   @media (min-width: 768px) {
     height: 160px;
-  }
-  @media (min-width: 1120px) {
-    width: 1120px;
+    width: 100%;
   }
 }
 
@@ -23,7 +21,11 @@
   top: 0;
   right: 0;
   z-index: 1;
+  @media (min-width: 768px) {
+    display: none;
+  }
 }
+
 .swiper::before {
   content: url(../img/fade-copy.svg);
   display: inline-block;
@@ -32,6 +34,9 @@
   left: 0;
   z-index: 2;
   transform: scale(-1, 1);
+  @media (min-width: 768px) {
+    display: none;
+  }
 }
 
 .swiper .swiper-slide {
@@ -47,11 +52,13 @@
   box-sizing: border-box;
   padding-inline: 16px;
   @media (min-width: 768px) {
-    width: 224px;
+    width: 218px;
   }
   @media (min-width: 1120px) {
+    width: 224px;
+  }
+  @media (min-width: 1440px) {
     width: 240px;
-    flex-wrap: wrap;
   }
 }
 
@@ -60,18 +67,19 @@
   @media (min-width: 768px) {
     display: flex;
     flex-direction: row;
-
     height: 160px;
     padding: 0;
     margin: 0;
-    // margin-bottom: 16px;
     flex-wrap: wrap;
     gap: 24px;
     row-gap: 16px;
-    padding-left: 24px;
+    padding-inline: 24px;
+    overflow: hidden;
   }
   @media (min-width: 1120px) {
     column-gap: 32px;
+    width: 752px;
+    box-sizing: border-box;
   }
 }
 
@@ -88,7 +96,7 @@
   max-width: 128px;
 }
 
-.swiper__button {
+.round-icon--swiper {
   background-image: url(../img/go.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -178,7 +186,7 @@
   align-self: flex-start;
 }
 
-.swiper__button--tech {
+.round-icon--tech {
   background-position: top;
   align-self: flex-end;
   padding-bottom: 16px;
@@ -244,7 +252,7 @@
   justify-content: space-between;
 }
 
-.swiper__button-order {
+.round-icon--order {
   background-image: url(../img/Group10.svg);
   background-repeat: no-repeat;
   background-position: center;
