--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,3 @@
 @import 'TTLakes', 'global', 'burger-menu', 'title', 'upper-menu', 'slide-menu',
   'article', 'subtitle', 'swiper-menu', 'expand-btn', 'price-offer', 'footer',
-  'price-table', 'feedback', 'request-call';
+  'price-table', 'modalMenus';
