--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 16px;
+  // padding: 0 16px;
   gap: 16px;
   padding-bottom: 24px;
+  width: 100%;
+  box-sizing: border-box;
   @media (min-width: 768px) {
     display: flex;
     flex-direction: row;
@@ -25,7 +27,7 @@
   font-size: 14px;
   text-align: left;
   white-space: preserve-breaks;
-
+  padding: 0 16px;
   margin: 0;
   margin-bottom: 16px;
   height: 90px;
@@ -46,40 +48,24 @@
   height: auto;
 }
 
-.content__link-more {
-  display: block;
-  font-weight: 500;
-  align-self: flex-start;
-  background-color: transparent;
-  border: none;
-  font-family: 'TT Lakes';
-  font-size: 16px;
-}
-
-.content__link-more::before {
-  content: url('../img/expand.svg');
-  display: inline-block;
-  position: relative;
-  vertical-align: middle;
-  height: 24px;
-  margin-right: 8px;
-}
-
-.content__link-more.active::before {
-  transform: rotate(180deg);
-}
-
 .article__img {
-  width: 100vw;
+  width: 100%;
   @media (min-width: 768px) {
     max-width: 360px;
     border-radius: 5px;
     margin-bottom: 0;
     align-self: flex-start;
+    padding-right: 16px;
   }
   @media (min-width: 1120px) {
     max-width: 531px;
     border-radius: 5px;
     margin-bottom: 0;
   }
+}
+
+.content__link-more {
+  display: block;
+  margin-left: 16px;
+  align-self: flex-start;
 }
